@@ -9,7 +9,8 @@ _("Save Page")
 _("Save Page As...")
 _("Save All")
 _("Print...")
-_("Write PNG...")
+_("Write image...")
+_("Recent files")
 _("Execute Script...")
 _("Close Window")
 _("Quit")
@@ -18,6 +19,9 @@ _("Edit")
 _("Undo")
 _("Redo")
 _("Select Mode")
+_("Cut Buffer")
+_("Copy Buffer")
+_("Paste Buffer")
 _("Edit...")
 _("Edit Text...")
 _("Copy Mode")
@@ -110,13 +114,18 @@ _("Text Size...")
 _("Toggle Grid On/Off")
 _("Toggle Snap On/Off")
 _("Snap Grid Spacing...")
+_("Scale up Grid Spacing")
+_("Scale down Grid Spacing")
 _("Toggle Outline/Box")
 _("Toggle Net Rubberband")
 _("Show Log Window...")
 _("Show Coord Window...")
 
 _("Help")
-_("About...")
-_("Manual...")
-_("Hotkeys...")
-_("Component...")
+_("Manual")
+_("FAQ")
+_("gEDA Wiki")
+_("Component Documentation")
+_("About gschem")
+_("Hotkeys")
+
