@@ -1,3 +1,9 @@
+2007-05-14 Werner Hoch  <werner.ho@gmx.de>
+
+	*po/de_DE.po: updated german translation
+
+	*src/rcstrings.c: added new menu entries
+
 2007-05-13 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* po/nl_NL.po: Copied in new updated Dutch translation from 
